Add OpenCV to the project, Run on phone

--- a/jni/Makefile
+++ b/jni/Makefile
@@ -1,6 +1,9 @@
-CFLAGS=-march=armv7-a -mtune=cortex-a8 -mfpu=neon -mfloat-abi=softfp 
+CFLAGS=-march=armv7-a -mtune=cortex-a8 -mfpu=neon -mfloat-abi=softfp -static
+LIB_CV=-L/usr/local/lib
+CVLIBS=-lopencv_core -lopencv_imgproc -lopencv_highgui
 
-all : testing_neon
+testing_neon : main.o gaussianBlur.o
+	g++ $(CFLAGS) main.o gaussianBlur.o -o testing_neon $(LIB_CV) $(CVLIBS)
 
 run :
 	echo Benchmark testing_neon
@@ -9,8 +12,11 @@ run :
 clean :
 	rm -f main
 
-testing_neon : main.cpp
-	g++ $(CFLAGS) -DNEON -o $@ $<
+main.o : main.cpp
+	g++ $(CFLAGS) -DNEON -c main.cpp
+
+gaussianBlur.o : ./src/gaussianBlur.cpp
+	g++ $(CFLAGS) -DNEON -c ./src/gaussianBlur.cpp
 
 
 
